deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: octoprint
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: octoprint
      app.kubernetes.io/part-of: octoprint
  replicas: 1
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: octoprint
        app.kubernetes.io/instance: octoprint
        app.kubernetes.io/component: octoprint
        app.kubernetes.io/part-of: octoprint
    spec:
      nodeSelector:
        dedicated: 3dprinter
      tolerations:
        - key: "dedicated"
          value: "3dprinter"
          effect: "NoSchedule"
      containers:
      - name: octoprint
        image: octoprint/octoprint:1.7.2
        securityContext:
          privileged: true
        resources:
          requests:
            memory: 2000Mi
            cpu: 1000m
          limits:
            memory: 3500Mi
            cpu: 2000m
        volumeMounts:
          - mountPath: /octoprint
            name: octoprint
            readOnly: false
          - mountPath: /dev/ttyACM0
            name: ttyacm0
            readOnly: false
          - mountPath: /dev/video0
            name: video0
            readOnly: false
      volumes:
      - name: octoprint
        persistentVolumeClaim:
          claimName: octoprint
      - name: ttyacm0
        hostPath:
          path: /dev/ttyACM0
      - name: video0
        hostPath:
          path: /dev/video0
