services.yml
apiVersion: v1
kind: Service
metadata:
  name: octoprint-svc
  labels:
    app.kubernetes.io/name: octoprint
    app.kubernetes.io/instance: octoprint
    app.kubernetes.io/component: octoprint
    app.kubernetes.io/part-of: octoprint
spec:
  selector:
    app.kubernetes.io/name: octoprint
    app.kubernetes.io/instance: octoprint
    app.kubernetes.io/component: octoprint
    app.kubernetes.io/part-of: octoprint
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 80
  type: ClusterIP
